Changed the homepage from a URL to a URI